@@ -2,6 +2,7 @@ debhelper (9.20151219+unreleased) UNRELEASED; urgency=medium
 
   * dh_strip: Document that dbgsym packages are built by
     default.
+  * Dh_Lib: Cache the results of getpackages.
 
  -- Niels Thykier <niels@thykier.net>  Sun, 20 Dec 2015 10:30:08 +0000
 
